--- a/Prototype/Prototype/DataWindow.xaml
+++ b/Prototype/Prototype/DataWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Prototype1.DataWindow"
+﻿<Window x:Class="IoTDataReceiver.DataWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:l="clr-namespace:Prototype1"
+        xmlns:l="clr-namespace:IoTDataReceiver"
         mc:Ignorable="d"
         Title="Patient's data" Height="273.305" Width="425.212" ResizeMode="NoResize" SizeToContent="WidthAndHeight" Loaded="Window_Loaded">
     <Window.Resources>
