--- a/Prototype/SmartWatch/MainWindow.xaml
+++ b/Prototype/SmartWatch/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Prototype1.MainWindow"
+﻿<Window x:Class="IoTDataReceiver.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:l="clr-namespace:Prototype1"
+        xmlns:l="clr-namespace:IoTDataReceiver"
         mc:Ignorable="d"
         Title="Smart Watch" Height="534.432" Width="869.373" Loaded="Window_Loaded">
     <Window.Resources>
@@ -20,9 +20,9 @@
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" FontWeight="Bold" Text="{Binding Path=Name}"/>
-                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Path=Data}"/>
-                    <ProgressBar Grid.Row="1" Grid.ColumnSpan="2" Margin="0" Height="5" Value="{Binding Path=Progress}" Minimum="0" Maximum="100" Foreground="{Binding Path=Name, Converter={StaticResource converter}}"/>
+                    <TextBlock Grid.Row="0" Grid.Column="0" FontWeight="Bold" Text="{Binding Path=Device.SubjectInfo.SubjectCode}"/>
+                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Path=BatteryLevel, Mode=OneWay}"/>
+                    <ProgressBar Grid.Row="1" Grid.ColumnSpan="2" Margin="0" Height="5" Value="{Binding Path=BatteryLevel, Mode=OneWay}" Minimum="0" Maximum="100"/>
                 </Grid>
             </Border>
         </DataTemplate>
@@ -48,14 +48,14 @@
         <Button x:Name="btnShowData" Content="Show data" HorizontalAlignment="Left" Margin="10,444,0,0" VerticalAlignment="Top" Width="200" Height="49" Click="btnShowData_Click"/>
         <ListBox x:Name="listBoxWatches" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" Height="429" Margin="10,10,0,0" VerticalAlignment="Top" Width="200" SelectionChanged="listBoxWatches_SelectionChanged"/>
         <StackPanel x:Name="watchPanel" HorizontalAlignment="Left" Height="483" Margin="215,10,0,0" VerticalAlignment="Top" Width="636">
-            <Label x:Name="label" Content="{Binding Path=Name}" Margin="0,70,0,0" FontSize="24" HorizontalAlignment="Center" />
+            <Label x:Name="label" Content="{Binding Path=Device.SubjectInfo.SubjectCode}" Margin="0,70,0,0" FontSize="24" HorizontalAlignment="Center" />
 
             <Button x:Name="btnGet" Content="Get data" Width="250" Height="40" Margin="0,40,0,0" Click="btnGet_Click"/>
             <StackPanel HorizontalAlignment="Center" Height="50" Width="250" Orientation="Horizontal" Margin="0,20,0,0" >
                 <Button x:Name="btnClear" Content="Clear &amp; setup watch" Margin="0,0,0,0" Width="200" Height="40" Click="btnClear_Click"/>
                 <Button x:Name="btnSet" Content="Set" Margin="0,0,0,0" Width="50" Height="40" Click="btnSet_Click"/>
             </StackPanel>
-            <ProgressBar x:Name="progressBar" Margin="50,20,50,0" Height="40" Minimum="0" Maximum="100" Value="{Binding Path=Progress}" Foreground="{Binding Path=Name, Converter={StaticResource converter}}"/>
+            <ProgressBar x:Name="progressBar" Margin="50,20,50,0" Height="40" Minimum="0" Maximum="100" Value="{Binding Path=BatteryLevel, Mode=OneWay}"/>
 
         </StackPanel>
 
