--- a/Prototype/SmartWatch/SetupWindow.xaml
+++ b/Prototype/SmartWatch/SetupWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Prototype1.SetupWindow"
+﻿<Window x:Class="IoTDataReceiver.SetupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prototype1"
+        xmlns:local="clr-namespace:IoTDataReceiver"
         mc:Ignorable="d"
         Title="SetupWindow" Height="344.492" Width="253.601" ResizeMode="NoResize" Loaded="Window_Loaded">
     <DockPanel>
