--- a/Prototype/SmartWatch/MainWindow.xaml
+++ b/Prototype/SmartWatch/MainWindow.xaml
@@ -48,14 +48,16 @@
         <Button x:Name="btnShowData" Content="Show data" HorizontalAlignment="Left" Margin="10,444,0,0" VerticalAlignment="Top" Width="200" Height="49" Click="btnShowData_Click"/>
         <ListBox x:Name="listBoxWatches" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" Height="429" Margin="10,10,0,0" VerticalAlignment="Top" Width="200" SelectionChanged="listBoxWatches_SelectionChanged"/>
         <StackPanel x:Name="watchPanel" HorizontalAlignment="Left" Height="483" Margin="215,10,0,0" VerticalAlignment="Top" Width="636">
-            <Label x:Name="label" Content="{Binding Path=PatientName}" Margin="0,70,0,0" FontSize="24" HorizontalAlignment="Center" />
+            <Label x:Name="label" Content="{Binding Path=PatientName}" Margin="0,50,0,0" FontSize="24" HorizontalAlignment="Center" />
 
             <Button x:Name="btnGet" Content="Get data" Width="250" Height="40" Margin="0,40,0,0" Click="btnGet_Click"/>
-            <StackPanel HorizontalAlignment="Center" Height="50" Width="250" Orientation="Horizontal" Margin="0,20,0,0" >
+            <Button x:Name="btnProcess" Content="Process data" Width="250" Height="40" Margin="0,20,0,0" Click="btnProcess_Click"/>
+            <Button x:Name="btnUpload" Content="Upload data" Width="250" Height="40" Margin="0,20,0,0" Click="btnUpload_Click"/>
+            <StackPanel HorizontalAlignment="Center" Height="40" Width="250" Orientation="Horizontal" Margin="0,20,0,0" >
                 <Button x:Name="btnClear" Content="Clear &amp; setup watch" Margin="0,0,0,0" Width="200" Height="40" Click="btnClear_Click"/>
                 <Button x:Name="btnSet" Content="Set" Margin="0,0,0,0" Width="50" Height="40" Click="btnSet_Click"/>
             </StackPanel>
-            <ProgressBar x:Name="progressBar" Margin="50,20,50,0" Height="40" Minimum="0" Maximum="100" Value="{Binding Path=BatteryLevel, Mode=OneWay}"/>
+            <ProgressBar x:Name="progressBar" Margin="50,40,50,0" Height="40" Minimum="0" Maximum="100" Value="{Binding Path=BatteryLevel, Mode=OneWay}"/>
 
         </StackPanel>
 
