--- a/Prototype/SmartWatch/SetupWindow.xaml
+++ b/Prototype/SmartWatch/SetupWindow.xaml
@@ -9,39 +9,47 @@
     <DockPanel>
         <DockPanel DockPanel.Dock="Bottom" Margin="10">
             <Button x:Name="btnCancel" Content="Cancel" HorizontalAlignment="Left" RenderTransformOrigin="0.5,0.5" Width="79" Height="29" Click="btnCancel_Click" />
-            <Button x:Name="btnOk" Content="Erase &amp; Setup" HorizontalAlignment="Right" RenderTransformOrigin="0.5,0.5" Width="90" Height="29" Click="btnOk_Click" />
+            <Button x:Name="btnOk" Content="Erase &amp; Set up" HorizontalAlignment="Right" RenderTransformOrigin="0.5,0.5" Width="90" Height="29" Click="btnOk_Click" />
         </DockPanel>
 
         <Grid Margin="10">
             <Grid.RowDefinitions>
+                <RowDefinition Height="55"></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
                 <ColumnDefinition Width="3*"></ColumnDefinition>
+                <ColumnDefinition Width="3*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Label x:Name="label0" Content="Patient's username" HorizontalAlignment="Left" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"/>
-            <ComboBox x:Name="cBoxPatients" SelectedItem="{Binding Path=Username}"  HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center"/>
-            <Separator Grid.Row="1" Grid.ColumnSpan="2" />
+            
+            <StackPanel Height="80" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Vertical">
+                <Label x:Name="label0" Content="Patient's username" HorizontalAlignment="Center" Height="25" />
+                <ComboBox x:Name="cBoxPatients" SelectedItem="{Binding Path=Username}"  Width="200" Height="30" FontSize="16"/>
+            </StackPanel>
+            
+           <!-- <Separator Grid.Row="1" Grid.ColumnSpan="3" /> -->
 
             <Label x:Name="label1" Content="Frequency" HorizontalAlignment="Left" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"/>
-            <TextBox x:Name="tBoxFrequency"  HorizontalAlignment="Stretch" Height="23" Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Text="{Binding Path=Settings[frequency]}" VerticalAlignment="Center" />
+            <ComboBox x:Name="cBoxFrequency" SelectedItem="{Binding Path=Settings[frequency]}" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center"/>
+            <Label x:Name="label1_Hz" Content="Hz" VerticalAlignment="Center" Grid.Row="2" Grid.Column="2" />
 
             <Label x:Name="label2" Content="Period" HorizontalAlignment="Left" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" />
             <!-- <StackPanel Height="23" Grid.Row="3" Grid.Column="2" Orientation="Horizontal">
                 <Label x:Name="label2_1" Content="days" />
                 <Label x:Name="label2_2" Content="hours" />
             </StackPanel> -->
-            <TextBox x:Name="tBoxPeriod"  HorizontalAlignment="Stretch" Height="23" Grid.Row="3" Grid.Column="2" TextWrapping="Wrap" Text="{Binding Path=Settings[period]}" VerticalAlignment="Center"/>
+            <TextBox x:Name="tBoxPeriod"  HorizontalAlignment="Stretch" Height="23" Grid.Row="3" Grid.Column="1" TextWrapping="Wrap" Text="{Binding Path=Settings[period]}" VerticalAlignment="Center"/>
+            <Label x:Name="label2_Hours" Content="hours" VerticalAlignment="Center" Grid.Row="3" Grid.Column="2" />
 
-            <Separator Grid.Row="4" Grid.ColumnSpan="2" />
+         <!--   <Separator Grid.Row="4" Grid.ColumnSpan="3" /> -->
 
             <Label x:Name="label3" Content="Study center" HorizontalAlignment="Left" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center"/>
             <TextBox x:Name="tBoxSCenter"  HorizontalAlignment="Stretch" Height="23" Grid.Row="5" Grid.Column="1" TextWrapping="Wrap" Text="{Binding Path=Settings[studyCenter]}" VerticalAlignment="Center"/>
@@ -49,7 +57,6 @@
             <Label x:Name="label4" Content="Study code" HorizontalAlignment="Left" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center"/>
             <TextBox x:Name="tBoxSCode"  HorizontalAlignment="Stretch" Height="23" Grid.Row="6" Grid.Column="1" TextWrapping="Wrap" Text="{Binding Path=Settings[studyCode]}" VerticalAlignment="Center"/>
 
-            <Label x:Name="label5" Content=":-)" HorizontalAlignment="Center" Grid.Row="7" Grid.ColumnSpan="2" VerticalAlignment="Center"/>
 
         </Grid>
     </DockPanel>
