--- a/Prototype/SmartWatch/MainWindow.xaml
+++ b/Prototype/SmartWatch/MainWindow.xaml
@@ -21,7 +21,7 @@
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Row="0" Grid.Column="0" FontWeight="Bold" Text="{Binding Path=DeviceInfo.PatientName, Mode=OneWay}"/>
-                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Path=DeviceInfo.BatteryLevel, Mode=OneWay}" HorizontalAlignment="Right" />
+                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Path=DeviceInfo.DeviceNumber, Mode=OneWay}" HorizontalAlignment="Right" />
                     <ProgressBar Grid.Row="1" Grid.ColumnSpan="2" Margin="0" Height="5" Value="{Binding Path=Progress, Mode=OneWay}" Minimum="0" Maximum="100" IsIndeterminate="{Binding Path=Progress, Mode=OneWay, Converter={StaticResource indeterminateConverter}}"/>
                 </Grid>
             </Border>
